# hyper-scale-ops

./: .env.example  .env.test.example  .gitignore  Dockerfile  Jenkinsfile  Jenkinsfile_local_deploy  Jenkinsfile_withou_docker  LICENSE  Makefile  README.md  alembic.ini  herokuStart.sh  pyproject.toml  requirements.txt
.github/workflows/: for-k8s.yml  main.yml
alembic/: env.py
alembic/versions/: 0bf712582941_create_student_tables.py  3569f42f8b4c_school_management_schema.py
app/: config.py  main.py
app/api/: classes.py  pages.py  periods.py  students.py  teachers.py
app/core/: database.py  logger.py  middleware.py  models_base.py  request_context.py
app/exceptions/: base.py  classes.py  database.py  handlers.py  periods.py  students.py  teachers.py
app/models/: __init__.py  all_models.py  classes.py  periods.py  students.py  teachers.py
app/responses/: api_response.py
app/schemas/: classes.py  periods.py  students.py  teachers.py
app/services/: class_service.py  period_service.py  student.py  student_service.py  teacher_service.py
app/validators/: classes.py  periods.py  students.py  teachers.py
static/css/: style.css
static/js/: app.js
templates/: base.html  class_details.html  class_form.html  classes.html  index.html  period_form.html  student_details.html  student_form.html  students.html  teacher_details.html  teacher_form.html  teachers.html  timetable.html
tests/: conftest.py
tests/api/: test_db.py  test_dummy.py  test_students.py  test_template_regressions.py
